// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullBleed /> by default should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  hasGradient={false}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
>
  <Segment
    className="full-bleed"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        hasRoundedCorners={false}
        imageHeight={null}
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        imageWidth={null}
        isAvatar={false}
        isCircular={false}
        isFluid={true}
        label={null}
        placeholderImageUrl={null}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            src="🐱🐱"
            title="Image Title"
            ui={true}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              src="🐱🐱"
              title="Image Title"
            />
          </Image>
        </picture>
      </ResponsiveImage>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`hasGradient\` is passed should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  hasGradient={true}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
>
  <Segment
    className="full-bleed has-gradient"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-gradient"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        hasRoundedCorners={false}
        imageHeight={null}
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        imageWidth={null}
        isAvatar={false}
        isCircular={false}
        isFluid={true}
        label={null}
        placeholderImageUrl={null}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            src="🐱🐱"
            title="Image Title"
            ui={true}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              src="🐱🐱"
              title="Image Title"
            />
          </Image>
        </picture>
      </ResponsiveImage>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`props.children > 0\` should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  hasGradient={false}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
>
  <Segment
    className="full-bleed has-children"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-children"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        hasRoundedCorners={false}
        imageHeight={null}
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        imageWidth={null}
        isAvatar={false}
        isCircular={false}
        isFluid={true}
        label={null}
        placeholderImageUrl={null}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            src="🐱🐱"
            title="Image Title"
            ui={true}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              src="🐱🐱"
              title="Image Title"
            />
          </Image>
        </picture>
      </ResponsiveImage>
      🏛
    </div>
  </Segment>
</FullBleed>
`;
